# ICR-Identifying-Age-Related-Conditions

./: .gitignore  README.md  dataset-metadata.json  pyproject.toml
.github/ISSUE_TEMPLATE/: discussion.md  expetiment.md  notebook.md
data/: submission.csv  train_numerical.csv
notebooks/: baseline.ipynb  hyperparameter.ipynb
src/: EDA.ipynb  EDA_greeks.ipynb  baseline.ipynb  hyperparameter.ipynb  submission.csv  weighted-lightgbm.ipynb  weighted-lightgbm_balanced_log_loss.ipynb
src/.ipynb_checkpoints/: EDA-checkpoint.ipynb  EDA_greeks-checkpoint.ipynb  baseline-checkpoint.ipynb  hyperparameter-checkpoint.ipynb  weighted-lightgbm_balanced_log_loss-checkpoint.ipynb
src/srs/: EDA.ipynb  EDA2.ipynb  baseline-lightgbm.ipynb  hyperparameter.ipynb  icr-tabpfn-and-xgboost-ensemble.ipynb  lgb_hyperparameter.py  preprocessed_xgboost.ipynb  preprocessing.ipynb  simple_tabpfn.ipynb  srs-tabpfn.ipynb  submission.csv  tabpfn-xgboost.ipynb  tabpfn-xgboost_mskf.ipynb  tabpfn_oversampling.ipynb  tabpfn_xgboost_mskf.ipynb  week3_Pythonによるデータ加工処理の基礎（Pandas）.ipynb  weighted-lightgbm.ipynb  xgb_hyperparameter.py  xgboost_mskf_Optuna.ipynb
src/srs/.ipynb_checkpoints/: icr-tabpfn-and-xgboost-ensemble-checkpoint.ipynb  lgb_hyperparameter-checkpoint.ipynb  preprocessed_xgboost-checkpoint.ipynb  preprocessing-checkpoint.ipynb  tabpfn-xgboost-checkpoint.ipynb  tabpfn-xgboost_mskf-checkpoint.ipynb  tabpfn_xgboost_mskf-checkpoint.ipynb  xgb+lgb+tabpfn-checkpoint.ipynb  xgboost_hyperparameter-checkpoint.ipynb  (+1 more)
src/wa/: main.ipynb  tabpfn_xgboost_mskf.ipynb  xgboost.ipynb
(+11 files in other folders)
