[project]
name = "icr-identifying-age-related-conditions"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "srs-1123", email = "srs.23p2.1123@gmail.com" }
]
dependencies = ["lightgbm~=3.3.5", "pandas~=2.0.2", "jupyter~=1.0.0", "xgboost~=1.7.5", "catboost~=1.2", "tqdm~=4.65.0", "optuna~=3.2.0"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
